# Fast_API_Implentation

./: README.md  main.py  params.yaml.dvc  pyproject.toml
fast_api_implentation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
